--- a/src/components/recipe-app/recipeComponents/Banner.css
+++ b/src/components/recipe-app/recipeComponents/Banner.css
@@ -2,12 +2,13 @@
   position: relative;
   margin-top: 0px;
   width: 100vw;
-  height: 400px;
+  height: auto;
   overflow: hidden;
+  margin-bottom: 1rem;
 }
 
 .banner-img {
-  width: 150%;
+  width: 100%;
   height: auto;
   object-fit: fill;
   display: block;
@@ -16,12 +17,12 @@
 
 .banner-text {
   position: absolute;
-  top: 50%;   
+  top: 60%;   
   left: 50%;      
   transform: translate(-50%, -50%);
   text-align: center;
   color: black;
-  font-size: 1rem;
+  font-size: 2rem;
   font-weight: bold;
   text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
 }
